# HeartRateMeasure

./: .gitignore  CMakeLists.txt  FastICA.cpp  FastICA.h  LICENSE  README.md  SignalProcessor.cpp  SignalProcessor.h  SignalProcessorColor.cpp  SignalProcessorColor.h  SignalProcessorMoving.cpp  SignalProcessorMoving.h  TODO  main.cpp  pca.cpp  pca.h  stat.h
data/: pca_128.conf  skin_model.yaml
data/emotions/: emotions-recognition-retail-0003.xml
data/face_detector/: face-detection-retail-0004.xml
detect_track/: FaceDetector.cpp  FaceDetector.h  LKTracker.cpp  LKTracker.h  SkinDetector.cpp  SkinDetector.h
eulerian_ma/: EulerianMA.cpp  EulerianMA.h  iir.cpp  iir.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  UtilityFunctions.cpp  UtilityFunctions.h  VideoFrame.cpp  VideoFrame.h  VideoScene.cpp  VideoScene.h  VitaGraph.qrc  VitaGraph.rc  main.cpp
src/: CMakeLists.txt
src/beat_calc/: CMakeLists.txt  MainProcess.cpp  MainProcess.h  SignalPlugin.h  plugin.h
src/beat_calc/signal0/: CMakeLists.txt  FastICA.cpp  FastICA.h  SignalProcessorColor.cpp  SignalProcessorColor.h  pca.cpp  plugin.cpp  stat.h
src/beat_calc/signal_vpg/: CMakeLists.txt  VPGSignalProcessor.cpp  VPGSignalProcessor.h  hrvprocessor.h  peakdetector.h  plugin.cpp  pulseprocessor.cpp  pulseprocessor.h
src/common/: CMakeLists.txt  common.cpp  common.h
src/detect_track/: CMakeLists.txt  EmotionDetection.cpp  EmotionDetection.h  FaceDetector.cpp  FaceDetector.h  LKTracker.cpp  LKTracker.h  SkinDetector.cpp  SkinDetector.h  infengine_defines.hpp
src/detect_track/extension/: ext_region_yolo.cpp  ext_spatial_transformer.cpp
src/eulerian_ma/: CMakeLists.txt  EulerianMA.cpp  EulerianMA.h  MotionAmp.cpp  MotionAmp.h  SimpleMA.cpp  SimpleMA.h  iir.cpp  iir.h
test/: CMakeLists.txt  main.cpp
